--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -3,3 +3,45 @@
 .clear {
     clear: both;
 }
+
+.circle {
+    font-weight:bold;
+    font-style: italic;
+    position: relative;
+    border-radius: 100%;
+    background: #4BF1E4;
+    border: 1px solid #F7F7F7;
+    width: 80px;
+    height: 80px;
+    margin: 10px 10px;
+    text-align: center;
+    color: #000000;
+    font-size: 10px;
+    line-height: 16px;
+    cursor: pointer;
+    transform:rotate(11deg);
+    -ms-transform:rotate(11deg); /* IE 9 */
+    -webkit-transform:rotate(11deg); /* Opera, Chrome, and Safari */
+}
+
+.slogan {
+    color: black;
+    font-size: 30px;
+    font-family: 'Libre Baskerville', serif;
+    font-style: italic
+    padding-top 25px; 
+}
+
+.links a {
+    color:black;
+    font-size: 25px;
+    border-bottom: 1px solid black
+}
+
+header{
+    border-top: 25px; 
+}
+
+hr{
+    clear:both;
+}
