--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,25 @@
   <body>
     <header class='row'>
       <div class="col-3">
-        LOGO
+       <div class="circle">
+          <br />
+          Dan
+          <br />
+          Pham
+          <br />
+          Code
+        </div>
+
       </div>
-      <div class="col-4">
-      Random Text 
+      <div class="col-4 slogan">
+      Random Slogan
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %> 
     </header>
+
+    <hr />
 
     <br class="clear"/>
 
