--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -45,3 +45,26 @@ header{
 hr{
     clear:both;
 }
+
+html{
+    position: relative;
+    min-height: 100%;
+}
+
+body{
+    margin-bottom: 60px;
+}
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5
+}
+
+.next-quote {
+    color: red
+    font-family 'Libre Baskerville', serif;
+    font-size: 20px;
+}
