--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,26 @@
     </header>
 
     <hr />
-
     <br class="clear"/>
+    <div class="container">
+      <%= yield %>
+    </div>
 
-    <%= yield %>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+          <%= "This isn't enough.", "#", class: 'next-quote' %> 
+          </div>
+          <div class="col-6 footer-blurb">
+          Edited by Dan Pham
+          </div>
+        <p class="text-muted">
+        Place sticky footer content here.
+        </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
+
