--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <header class='row'>
       <div class="col-3">
+      <%= link_to root_path, class: 'logo' do %>
        <div class="circle">
           <br />
           Dan
@@ -20,13 +21,13 @@
           <br />
           Code
         </div>
-
+      <% end %>
       </div>
       <div class="col-4 slogan">
       Random Slogan
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %> 
     </header>
 
@@ -40,7 +41,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-          <%= "This isn't enough.", "#", class: 'next-quote' %> 
+          <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer-blurb">
           Edited by Dan Pham
