--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Splurty</title>
+    <title> Splurty </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -19,7 +19,7 @@
           <br />
           Pham
           <br />
-          Code
+          Web App 
         </div>
       <% end %>
       </div>
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-          <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
+          <%= link_to "Temporary Placeholder Footer", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer-blurb">
           Edited by Dan Pham
