--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,51 @@
         </div>
       <% end %>
       </div>
-      <div class="col-4 slogan">
+      <div class="col col-sm-4 hidden-xs-down slogan">
       Random Slogan
       </div>
-      <div class="col-5 links">
-        <%= link_to 'Contribute', new_quote_path %>
+      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
+         <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+          Launch demo modal
+        </button>
+        <%= link_to 'Contribute','#', data: {toggle: 'modal', target: '#myModal'}%>
+          &nbsp;&nbsp;
         <%= link_to 'About', about_path %> 
     </header>
+
+     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Launch demo modal
+    </button>
+
+     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="Contribute Your Quote" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <%= simple_form_for @quote do |f| %>
+              <div class="modal-body">
+              <%= f.input :saying, label: "What is the saying you want to add?", Placeholder: "Temporary Quote"%>
+              <br />
+              <%= f.input :author, label: "Who is the author?", Placeholder: "Temporary Author" %>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <%= f.submit :'Create', class: 'btn btn-danger' %>
+              </div>
+            <% end %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <hr />
     <br class="clear"/>
@@ -46,10 +84,10 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
           <%= link_to "Temporary Placeholder Footer", root_path, class: 'next-quote' %>
           </div>
-          <div class="col-6 footer-blurb">
+          <div class="col-12 col-sm-6 footer-blurb">
           Edited by Dan Pham
           </div>
         <p class="text-muted">
